# sparkyuv

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  DOC.md  Dockerfile  Dockerfile.msvc  README.md  ci_android_runner.sh  deps.sh
.github/workflows/: android.yml  build.yml  graviton.yml  multiarch.yml  release.yml  windows.yml
include/: sparkyuv-basic.h  sparkyuv-def.h  sparkyuv-eotf.h  sparkyuv-nv.h  sparkyuv-rgb565.h  sparkyuv-ycbcr.h  sparkyuv-yccbccrc.h  sparkyuv-ycgco.h  sparkyuv-ycgcor.h  sparkyuv-ydbdr.h  sparkyuv-ydzdx.h  sparkyuv-yiq.h  sparkyuv.h
src/: BlendAlpha-inl.h  ChannelLength.cpp  Channels-inl.h  ChannelsReformat.cpp  CopyImage-inl.h  CopyImage.cpp  Eotf-inl.h  Eotf.cpp  FastGaussian.cpp  FastGaussian.h  FastGaussianNeon.cpp  FastGaussianNeon.h  Flip-inl.h  Flip.cpp  GaussianBlur-inl.h  GaussianBlur.cpp  NV12-inl.h  NV12Flyer.cpp  NV16-inl.h  NV16Flyer.cpp  NV24-inl.h  NV24Flyer.cpp  PixelLoader.h  RGB565Reformat-inl.h  RGB565Reformat.cpp  Rotate-inl.h  Rotate.cpp  Saturate-inl.h  Scale.cpp  TransformMatrix-inl.h  Transpose-inl.h  Transpose.cpp  TypeSupport.h  Wide-inl.h  YCbCr400-inl.h  YCbCr400.cpp  YCbCr400P16-inl.h  YCbCr410.cpp  YCbCr411-inl.h  YCbCr411.cpp  (+23 more)
src/ITUR/: eotf-inl.h
src/math/: common.h  fast_math-inl.h  gaussian.h  math-inl.h  rational_polynomial-inl.h
src/sampler/: BilinearRowSampler-inl.hpp  BoxRowSampler-inl.h  NearestRowSampler-inl.hpp  ScaleRowSampler.hpp  Window4RowSampler-inl.hpp  Window6RowSampler-inl.hpp  sampler-inl.h  sampler.h
toolchain/: ci_android_runner.sh  graviton.cmake
tools/: JPEGDecoder.h  JPEGEncoder.cpp  JPEGEncoder.h  YuvBenchmarkMain.cpp  YuvReader.h  bench.h  main.cpp
tools/bench/: YuvBenchmark10.cpp  YuvBenchmark10.h  YuvBenchmarkBase.cpp  YuvBenchmarkBase.h  YuvBenchmarkNV.cpp  YuvBenchmarkNV.h  YuvBenchmarkYCgCo.cpp  YuvBenchmarkYCgCo.h  YuvBenchmarkYCgCoR.cpp  YuvBenchmarkYCgCoR.h  YuvBenchmarkYDbDr.cpp  YuvBenchmarkYDbDr.h  YuvBenchmarkYDzDx.cpp  YuvBenchmarkYDzDx.h  YuvBenchmarkYIQ.cpp  YuvBenchmarkYIQ.h  YuvBenchmarkYcCbcCrc.cpp  YuvBenchmarkYcCbcCrc.h  YuvSupport.cpp  YuvSupport.h
